--- a/telecom-churn-analysis/package.json
+++ b/telecom-churn-analysis/package.json
@@ -15,6 +15,7 @@
     "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
     "method-override": "^3.0.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.4",
     "python-shell": "^5.0.0"
   }
