--- a/chat/package.json
+++ b/chat/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "portfolio",
+  "name": "chat",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
@@ -11,25 +10,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
-    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
-    "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.18.0",
-    "flash": "^1.1.0",
-    "helmet": "^7.1.0",
+    "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
-    "mongoose": "^8.4.1",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.1.3",
+    "mongoose": "^8.4.3",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.4",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
-    "python-shell": "^5.0.0",
-    "slugify": "^1.6.6"
-  }
+    "socket.io": "^4.7.5"
+  },
+  "description": ""
 }
