--- a/consultation/.env
+++ b/consultation/.env
@@ -1,1 +1,4 @@
 DB_URL = 'mongodb+srv://EOlaw146:Olawalee_.146@cluster0.4wv68hn.mongodb.net/Consultation?retryWrites=true&w=majority'
+SECRET = 'p2xv8BGCmMmIYN1UkFVfrVRZBxeYKr11vLZTfqEMwaE='
+NODE_ENV='development'
+NODE_ENV='production'
