--- a/consultation/package.json
+++ b/consultation/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.18.0",
     "flash": "^1.1.0",
     "helmet": "^7.1.0",
