--- a/portfolios/package.json
+++ b/portfolios/package.json
@@ -16,6 +16,7 @@
     "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
     "flash": "^1.1.0",
+    "helmet": "^7.1.0",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0"
   }
