--- a/consultation/.env
+++ b/consultation/.env
@@ -1,4 +1,3 @@
-DB_URL = 'mongodb+srv://EOlaw146:Olawalee_.146@cluster0.4wv68hn.mongodb.net/Consultation?retryWrites=true&w=majority'
+DB_URL_CONSULTATION = 'mongodb+srv://EOlaw146:Olawalee_.146@cluster0.4wv68hn.mongodb.net/Consultation?retryWrites=true&w=majority'
 SECRET = 'p2xv8BGCmMmIYN1UkFVfrVRZBxeYKr11vLZTfqEMwaE='
-NODE_ENV='development'
-NODE_ENV='production'
+NODE_ENV=development  # or 'production' as needed
