--- a/consultation/package.json
+++ b/consultation/package.json
@@ -17,13 +17,14 @@
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.18.0",
     "flash": "^1.1.0",
     "helmet": "^7.1.0",
     "method-override": "^3.0.0",
-    "mongoose": "^8.4.1",
+    "mongoose": "^8.4.4",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.3",
     "passport": "^0.7.0",
